--- a/Criando-Bot-Com-Rasa/projeto-rasa/data/stories.yml
+++ b/Criando-Bot-Com-Rasa/projeto-rasa/data/stories.yml
@@ -28,3 +28,9 @@ stories:
   - action: utter_did_that_help
   - intent: deny
   - action: utter_goodbye
+
+# criando uma story
+ story: path 1
+  steps:
+  - intent: order_pizza
+  - action: utter_order_pizza
